test : 우승자가 한 명인 경우와 여러 명인 경우를 나눠서 테스트 작성